--- a/.deliver/config
+++ b/.deliver/config
@@ -30,9 +30,9 @@ pre_erlang_clean_compile() {
     cd '$BUILD_AT' # enter the build directory on the build host (required)
     # prepare something
     mkdir -p priv/static # required by the phoenix.digest task
-    npm install
+    # npm install
 
-    ./node_modules/brunch/bin/brunch build --production
+    # ./node_modules/brunch/bin/brunch build --production
 
     # run your custom task
     APP='$APP' MIX_ENV='$TARGET_MIX_ENV' $MIX_CMD phoenix.digest $SILENCE
